improving JSONParser and Writer (not finished)